Fix firefox bug where logo was displaying too small

--- a/website/components/downloader/cards/style.module.css
+++ b/website/components/downloader/cards/style.module.css
@@ -10,6 +10,10 @@
   margin-bottom: 10px;
 }
 
+.logoDownloadWrapper {
+  width: 100%;
+}
+
 .version {
   margin-left: 8px;
 }
